--- a/index.html
+++ b/index.html
@@ -7,83 +7,79 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
-    /* لمسات حركة خفيفة */
-.card{ transition: transform .15s ease, box-shadow .2s ease; }
-.card:hover{ transform: translateY(-2px); box-shadow:0 12px 28px rgba(0,0,0,.28); }
-
-.chip{ transition: transform .12s ease, background .2s ease, color .2s ease; }
-.chip:hover{ transform: translateY(-1px); }
-
-.category{ backdrop-filter: blur(4px); }
-
-/* بريق خفيف للحالات */
-.pill.ok      { box-shadow: 0 0 0 2px rgba(99,230,165,.12) inset; }
-.pill.soon    { box-shadow: 0 0 0 2px rgba(255,165,0,.12) inset; }
-.pill.expired { box-shadow: 0 0 0 2px rgba(255,107,107,.12) inset; }
-
-/* تحريك بسيط لنقطة الحالة داخل الـ pill */
-.pill .dot{ display:inline-block; transform: scale(1); transition: transform .2s ease; }
-.pill:hover .dot{ transform: scale(1.2); }
-
-      --bg:#0b0f14;--card:#0f151d;--muted:#92a0b3;--text:#e8eef6;
-      --brand:#7a6bff;--accent:#ff6b6b;--ok:#63e6a5;
+      --bg:#0b0f14;
+      --card:#0f151d;
+      --muted:#92a0b3;
+      --text:#e8eef6;
+      --brand:#7a6bff;
+      --accent:#ff6b6b;
+      --ok:#63e6a5;
       --border:1px solid rgba(255,255,255,.08);
     }
-    body{margin:0;background:#0a0f14;color:var(--text);font-family:"Cairo",sans-serif}
+
+    *{box-sizing:border-box}
+    html{scroll-behavior:smooth;}
+    body{
+      margin:0;
+      background:
+        radial-gradient(900px 550px at 10% -10%, rgba(122,107,255,.18), transparent),
+        radial-gradient(1000px 700px at 95% 120%, rgba(99,230,165,.10), transparent),
+        #05070b;
+      color:var(--text);
+      font-family:"Cairo",sans-serif;
+    }
     .container{width:min(1180px,93%);margin:auto}
 
+    ::-webkit-scrollbar{width:8px;}
+    ::-webkit-scrollbar-track{background:#05070b;}
+    ::-webkit-scrollbar-thumb{
+      background:linear-gradient(180deg,#7a6bff,#63e6a5);
+      border-radius:999px;
+    }
+
     /* NAV */
-    nav{position:sticky;top:0;z-index:30;background:#11171f;padding:12px 0;border-bottom:var(--border)}
-    .nav-inner{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    nav{
+      position:sticky;top:0;z-index:30;
+      background:linear-gradient(180deg,rgba(12,16,24,.96),rgba(12,16,24,.8));
+      padding:10px 0;
+      border-bottom:var(--border);
+      backdrop-filter:blur(16px);
+      box-shadow:0 14px 40px rgba(0,0,0,.7);
+    }
+    .nav-inner{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap}
     .brand{display:flex;align-items:center;gap:10px;font-weight:800}
-    .brand .logo{width:36px;height:36px;border-radius:10px;display:inline-block;background:center/cover no-repeat url('RTHospital.png');margin-left:8px}
-    .search{flex:1;display:flex;gap:8px;align-items:center;background:#121a25;border:var(--border);border-radius:12px;padding:8px 12px;margin:0 16px}
+    .brand .logo{
+      width:36px;height:36px;border-radius:10px;display:inline-block;
+      background:center/cover no-repeat url('RTHospital.png');
+      margin-left:8px;
+      box-shadow:0 0 0 1px rgba(255,255,255,.18) inset;
+    }
+    .search{
+      flex:1;display:flex;gap:8px;align-items:center;
+      background:#121a25;border:var(--border);border-radius:12px;
+      padding:8px 12px;margin:0 16px;
+      box-shadow:0 0 0 1px rgba(122,107,255,.18);
+      min-width:220px;
+    }
     .search input{all:unset;flex:1;color:var(--text)}
-    .nav-actions{display:flex;gap:8px;align-items:center}
-    /* إجمالي صغير */
+    .nav-actions{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
     .total-badge{
       display:inline-flex; align-items:center; gap:8px; padding:6px 10px;
       border-radius:999px; border:var(--border); background:#121a25; color:var(--text);
       font-size:12px;
     }
     .total-badge .dot{ width:8px; height:8px; border-radius:50%; background:var(--ok) }
-
-    /* FILTERS */
-    .filters{display:flex;gap:8px;flex-wrap:wrap;margin:14px 0}
-    .chip{padding:8px 12px;border-radius:999px;border:var(--border);background:#121a25;color:var(--muted);cursor:pointer}
-    .chip[aria-pressed="true"]{background:var(--text);color:#0b0f14;border-color:transparent}
-    /* ألوان الفلاتر */
-    .chip[data-cat="فضي"]{ background:rgba(192,192,192,.12); color:#c0c0c0; border:1px solid #c0c0c0; }
-    .chip[data-cat="ذهبي"]{ background:rgba(255,215,0,.12); color:#ffd700; border:1px solid #ffd700; }
-    .chip[data-cat="بلاتيني"]{ background:rgba(229,228,226,.12); color:#9eaaff; border:1px solid #9eaaff; }
-    .chip[data-cat="soon"]{ background:rgba(255,165,0,.12); color:#ffa500; border:1px solid #ffa500; }
-    .chip[data-cat="expired"]{ background:rgba(255,107,107,.12); color:#ff6b6b; border:1px solid #ff6b6b; }
-
-    /* GRID & CARD */
-    .grid{display:grid;gap:12px;grid-template-columns:repeat(auto-fill,minmax(260px,1fr))}
-    .card{background:var(--card);border:var(--border);border-radius:14px;overflow:hidden;display:flex;flex-direction:column;position:relative}
-    .media img{width:100%;max-height:200px;object-fit:contain}
-    .content{padding:10px 12px;display:grid;gap:4px}
-    .title{font-weight:800;font-size:15px}
-    .line{color:var(--muted);font-size:12px;display:flex;justify-content:space-between}
-    .status{margin-top:2px;font-size:12px}
-
-    /* شارة المكان (نضع فيها الـ pill) */
-    .badge{position:absolute;top:10px;left:10px;padding:0;border:none;background:transparent}
-
-    /* شارة الفئة أعلى يمين البطاقة + ألوان الفئة نفسها (مهم) */
-    .category{position:absolute;top:10px;right:10px;padding:6px 10px;border-radius:999px;font-size:12px;border:var(--border);background:rgba(255,255,255,.06)}
-    .cat-silver{ color:#c0c0c0; border-color:#c0c0c0; background:rgba(192,192,192,.12) }
-    .cat-gold{   color:#ffd700; border-color:#ffd700; background:rgba(255,215,0,.12) }
-    .cat-plat{   color:#9eaaff; border-color:#9eaaff; background:rgba(229,228,226,.12) }
-
-    footer{text-align:center;padding:20px 0;color:var(--muted)}
+    .select{
+      padding:6px 10px;border-radius:10px;border:var(--border);
+      background:#121a25;color:var(--text);font-size:12px;
+      font-family:inherit;
+    }
 
     /* Intro / Splash */
     #intro{
       position:fixed; inset:0; z-index:9999;
       display:flex; flex-direction:column; align-items:center; justify-content:center;
-      background:#0a0f14;
+      background:#05070b;
       animation: fadeOut 0.8s ease forwards;
       animation-delay: 2.2s;
     }
@@ -93,17 +89,73 @@
     @keyframes scaleIn{ from{ transform:scale(.9); opacity:.4 } to{ transform:none; opacity:1 } }
     @keyframes pulse{ 0%,100%{ transform:scale(1) } 50%{ transform:scale(1.06) } }
 
-    /* PILL (شفافة + إطار + نقطة) */
+    /* FILTERS */
+    .filters{display:flex;gap:8px;flex-wrap:wrap;margin:14px 0}
+    .chip{
+      padding:8px 12px;border-radius:999px;border:var(--border);
+      background:#121a25;color:var(--muted);cursor:pointer;
+      font-size:12px;
+      transition:transform .12s ease, background .2s ease, color .2s ease;
+    }
+    .chip:hover{ transform:translateY(-1px); }
+    .chip[aria-pressed="true"]{background:var(--text);color:#0b0f14;border-color:transparent}
+    .chip[data-cat="فضي"]{ background:rgba(192,192,192,.12); color:#c0c0c0; border:1px solid #c0c0c0; }
+    .chip[data-cat="ذهبي"]{ background:rgba(255,215,0,.12); color:#ffd700; border:1px solid #ffd700; }
+    .chip[data-cat="بلاتيني"]{ background:rgba(229,228,226,.12); color:#9eaaff; border:1px solid #9eaaff; }
+    .chip[data-cat="soon"]{ background:rgba(255,165,0,.12); color:#ffa500; border:1px solid #ffa500; }
+    .chip[data-cat="expired"]{ background:rgba(255,107,107,.12); color:#ff6b6b; border:1px solid #ff6b6b; }
+
+    /* GRID & CARD */
+    .grid{display:grid;gap:12px;grid-template-columns:repeat(auto-fill,minmax(260px,1fr))}
+    .card{
+      background:var(--card);border:var(--border);border-radius:16px;
+      overflow:hidden;display:flex;flex-direction:column;position:relative;
+      box-shadow:0 12px 30px rgba(0,0,0,.4);
+      transition:transform .15s ease, box-shadow .2s ease, border-color .2s ease, background .2s ease;
+    }
+    .card:hover{
+      transform:translateY(-2px);
+      box-shadow:0 20px 46px rgba(0,0,0,.75);
+      border-color:rgba(122,107,255,.9);
+      background:radial-gradient(circle at top,rgba(122,107,255,.14),transparent 55%),#0b1119;
+    }
+    .media img{width:100%;max-height:200px;object-fit:contain}
+    .content{padding:10px 12px 12px;display:grid;gap:4px}
+    .title{font-weight:800;font-size:15px}
+    .line{color:var(--muted);font-size:12px;display:flex;justify-content:space-between}
+    .status{margin-top:2px;font-size:12px}
+
+    .badge{position:absolute;top:10px;left:10px;padding:0;border:none;background:transparent;z-index:2}
+    .category{
+      position:absolute;top:10px;right:10px;padding:6px 10px;border-radius:999px;
+      font-size:12px;border:var(--border);background:rgba(255,255,255,.06);
+      backdrop-filter:blur(6px);
+    }
+    .cat-silver{ color:#c0c0c0; border-color:#c0c0c0; background:rgba(192,192,192,.12) }
+    .cat-gold{   color:#ffd700; border-color:#ffd700; background:rgba(255,215,0,.12) }
+    .cat-plat{   color:#9eaaff; border-color:#9eaaff; background:rgba(229,228,226,.12) }
+
+    footer{text-align:center;padding:20px 0;color:var(--muted)}
+
+    /* PILL */
     .pill{
       display:inline-flex; align-items:center; gap:6px;
       padding:2px 10px; border-radius:999px;
       font-size:12px; line-height:1;
       background:transparent; color:currentColor; border:1px solid currentColor;
     }
-    .pill .dot{ width:6px; height:6px; border-radius:50%; background:currentColor; }
-    .pill.ok{      color: var(--ok);     }
-    .pill.soon{    color: #ffa500;       }
-    .pill.expired{ color: var(--accent); }
+    .pill .dot{
+      width:6px; height:6px; border-radius:50%; background:currentColor;
+      display:inline-block; transform:scale(1); transition:transform .2s ease;
+    }
+    .pill.ok      { color: var(--ok);     box-shadow:0 0 0 2px rgba(99,230,165,.12) inset; }
+    .pill.soon    { color: #ffa500;       box-shadow:0 0 0 2px rgba(255,165,0,.12) inset; }
+    .pill.expired { color: var(--accent); box-shadow:0 0 0 2px rgba(255,107,107,.12) inset; }
+    .pill:hover .dot{ transform:scale(1.2); }
+
+    @media(max-width:720px){
+      .search{margin:6px 0}
+    }
   </style>
 </head>
 <body>
@@ -123,6 +175,10 @@
       <div class="search"><input id="searchInput" placeholder="بحث بالاسم أو رقم الهوية" /></div>
       <div class="nav-actions">
         <div class="total-badge">الإجمالي <span id="totalCount">0</span> <span class="dot"></span></div>
+        <select id="sortSelect" class="select">
+          <option value="soon">قريب الانتهاء أولاً</option>
+          <option value="newest">الأحدث إضافة</option>
+        </select>
       </div>
     </div>
   </nav>
@@ -136,8 +192,6 @@
       <button class="chip" data-cat="soon">قريب ينتهي</button>
       <button class="chip" data-cat="expired">منتهي</button>
     </div>
-
-    
   </header>
 
   <main class="container">
@@ -146,7 +200,6 @@
 
   <footer>© <span id="year"></span> مستشفى ريسبكت</footer>
 
-  <!-- Supabase (عرض فقط) -->
   <script type="module">
     const SUPABASE_URL = "https://piexwsbnbyfqkylqykpi.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBpZXh3c2JuYnlmcWt5bHF5a3BpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MDk4MDAsImV4cCI6MjA3NDQ4NTgwMH0.BDYZ1ZAuhLOg7WTUiAWsedNuwRVKfiK-LpUbRsnic3Q";
@@ -203,8 +256,7 @@
         .from('insurances')
         .select('id,name,nid,category,expiry,photo,created_at')
         .order('expiry',{ascending:true});
-      ALL = error ? [] : data;
-      totalCountEl.textContent = ALL.length || 0;
+      ALL = error ? [] : data || [];
       render();
     }
 
@@ -232,20 +284,17 @@
       return clone;
     }
 
-   function render(){
-  const filtered = applyFilters(ALL);
-  const sorted   = applySort(filtered);
+    function render(){
+      const filtered = applyFilters(ALL);
+      const sorted   = applySort(filtered);
 
-  // ✅ حدّث الإجمالي حسب الفلترة
-  totalCountEl.textContent = filtered.length || 0;
-
-  cards.innerHTML = sorted.map(cardHTML).join('');
-}
-
+      totalCountEl.textContent = filtered.length || 0;
+      cards.innerHTML = sorted.map(cardHTML).join('');
+    }
 
     function subscribeRealtime(){
       sb.channel('insurances-realtime')
-        .on('postgres_changes', { event: '*', schema: 'public', table: 'insurances' }, async (payload)=>{
+        .on('postgres_changes', { event: '*', schema: 'public', table: 'insurances' }, (payload)=>{
           const { eventType, new:NEW, old:OLD } = payload;
           if(eventType === 'INSERT'){
             ALL.push(NEW);
@@ -255,7 +304,6 @@
           } else if(eventType === 'DELETE'){
             ALL = ALL.filter(x=>x.id!==OLD.id);
           }
-          totalCountEl.textContent = ALL.length || 0;
           render();
         })
         .subscribe();
@@ -263,13 +311,20 @@
 
     searchInput.oninput=render;
     sortSelect?.addEventListener('change', render);
-    chips.forEach(c=>c.onclick=()=>{chips.forEach(x=>x.setAttribute('aria-pressed','false'));c.setAttribute('aria-pressed','true');render()});
+    chips.forEach(c=>c.onclick=()=>{
+      chips.forEach(x=>x.setAttribute('aria-pressed','false'));
+      c.setAttribute('aria-pressed','true');
+      render();
+    });
     document.getElementById('year').textContent=new Date().getFullYear();
 
     await load();
     subscribeRealtime();
 
-    setTimeout(()=>{ const el=document.getElementById('intro'); if(el) el.style.display='none'; }, 2400);
+    setTimeout(()=>{
+      const el=document.getElementById('intro');
+      if(el) el.style.display='none';
+    },2400);
   </script>
 </body>
 </html>
